# cli-url-shortener

./: .gitignore  pyproject.toml  run_api.py  run_cli.py
.github/: copilot-instructions.md
src/api/core/: base62.py  database.py  exceptions.py  settings.py
src/api/models/: __init__.py  shortener_models.py
src/api/routes/: redirect_routes.py  shortener_routes.py
src/api/schemas/: shortener_schemas.py
src/api/server/: server.py
src/cli/: app.py
src/cli/client/: api_client.py
src/cli/commands/: url_commands.py
src/cli/core/: settings.py
src/cli/ui/: display.py
src/test/: conftest.py
tests/: test_shorten.py
