[project]
name = "cli-url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pyperclip>=1.11.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
    "uvicorn>=0.46.0",
]
