[project]
name = "cli-url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pyperclip>=1.11.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
    "uvicorn>=0.46.0",
]
